--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,252 @@
-h1{
-  background-color: red;
+*, 
+*::after, 
+*::before{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+body{
+  background-color: #261F1C;
+  color: #D9D9D9;
+}
+
+html{
+  font-size: 16px;
+  box-sizing: inherit;
+}
+
+
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+
+h2{
+  color: #B89B74;
+}
+
+main{
+  position: relative;
+}
+
+/*** Navegacion ***/
+
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  z-index: 1;
+}
+
+.nombre-despacho{
+  color: #B89B74;
+}
+
+.nav-links{
+  display: flex;
+  gap: 4rem;
+}
+
+nav li a:visited {
+  color: inherit;
+}
+
+/*** Inicio ***/
+
+.inicio{
+  position: relative;
+  height: 100vh;
+  /* margin-top: -3.2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.background{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-image: url(assets/Gemini_Generated_Image_5buwax5buwax5buw.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: opacity(30%);
+}
+
+.contacto-inicio{
+  background-color: #b89b74;
+  padding: .3rem 1rem;
+  border-radius: 5px;
+  color: #261f1c;
+  font-weight: 900;
+}
+
+/*** Nosotros ***/
+
+.nosotros{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+    background-color: #2C3E50;
+}
+
+.nosotros-text{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 90%;
+  margin: auto;
+  
+}
+
+.nosotros-img{
+  width: 85%;
+  margin: auto;
+}
+
+.nosotros-text-derecha{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+}
+
+.nosotros-text-derecha h3{
+  margin-bottom: 2rem;
+}
+
+.areas{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  margin-top: 2rem;
+}
+
+.nosotros-text-derecha p{
+  margin: .5rem;
+}
+.area{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 10rem;
+  border-radius: 10px;
+  background-color: #261F1C;
+}
+
+.areas-icono{
+  width: 3rem;
+}
+
+.areas p{
+  margin-top: 0;
+  width: 5rem;
+  text-align: center;
+}
+
+/*** casos de exito ***/
+
+.casos-exito{
+  width: 80%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  gap: 4rem;
+}
+
+.exito-content{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+}
+
+.caso{
+  padding: 1.5rem;
+  border-radius: 10px;
+  background-color: #4C3F3A;
+}
+
+.resolucion{
+  color: #B89B74;
+}
+
+/*** contacto ***/
+
+.contacto{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #2C3E50;
+}
+
+.formulario{
+  display: flex;
+  flex-direction: column;
+  width: 30rem;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #261F1C;
+}
+
+input, textarea{
+  margin: .3rem 0 .5rem 0;
+  border-radius: 5px;
+  border: none;
+  background-color: grey;
+  padding: .3rem;
+  background-color: #4C3F3A;
+}
+
+.enviar-btn{
+  padding: .4rem;
+  background-color: #B89B74;
+}
+
+.social{
+  display: flex;
+  gap: 3rem;
+  margin: 3rem 0;
+}
+
+.social-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-logo{
+  width: 2.5rem;
+}
+
+/*** footer ***/
+
+footer{
+  text-align: center;
+  padding: .5rem 0;
+}
+
+footer p{
+  margin: 0;
+}
+
+.creador{
+  font-size: .9rem;
 }
